--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Consorcio Olazabal 1862</h1>
+<div class="container">
+<h2>Consorcio Olazabal 1862</h2>
 <%= link_to "Comprobantes cargados", controller: "transactions" %>
+</div>
