--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -1,6 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
-   "http://www.w3.org/TR/html4/strict.dtd">
-<html lang="en">
   <head>
 	  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	  <title>show.html</title>
@@ -10,13 +7,14 @@
   <body>
   <%= yield %>
   
-  <h2>Comprobante creado correctamente.</h2>
-		<table border="1" cellpadding="1" cellspacing="1" style="width: 500px;">
+  <h1>Comprobante creado correctamente</h1>
+		<table class="table">
 			<thead>
 				<tr>
 					<th scope="col">Servicio</th>
 					<th scope="col">Fecha de Pago</th>
 					<th scope="col">Comentarios</th>
+                    <th scope="col">Imagen</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -28,6 +26,6 @@
 				</tr>
 			</tbody>
         </table>
-<%= link_to "Todos los comprobantes", transactions_path %>
+<%= link_to "Ver todos", transactions_path %>
   </body>
 </html>
